--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0px;
+    padding: 0px;
 }
 
 html, body {
@@ -11,4 +12,27 @@ html, body {
 
 #map {
     height: 100%;
+}
+
+#sidebar {
+    z-index: 1;
+}
+
+#parkList {
+    position: fixed;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: scroll;
+    background: white;
+    list-style-type: none;
+}
+
+.parkListItem {
+    padding: 5px;
+
+}
+
+.parkListItem:hover {
+    background: green;
 }
