--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    font-family: 'Roboto', sans-serif;
 }
 
 html, body {
@@ -15,20 +16,52 @@ html, body {
 #sidebar {
     position: fixed;
     height: 100%;
+    max-width: 90%;
     top: 0;
     left: 0;
-    padding: 10px 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0px;
+    background: white;
 }
 
 #searchBar {
     background: white;
+    display: flex;
+    align-items: center;
+}
+
+#searchBarInput {
+    border: none;
+    font-size: 15px;
+}
+
+#searchBarForm {
+}
+
+.hamburgerIcon {
+    border: none;
+    width: 25px;
+    margin: 12px 16px;
+    cursor: pointer;
+}
+
+.searchIcon {
+    width: 25px;
+    cursor: pointer;
+    margin: 12px 16px;
+}
+
+.resetIcon {
+    width: 25px;
+    cursor: pointer;
+    margin: 12px 16px;
 }
 
 #parkList {
-    height: 100%;
     list-style-type: none;
-    overflow: scroll;
-    background: white;
+    overflow-y: scroll;
+    overflow-x: none;
 }
 
 .parkListItem {
@@ -36,7 +69,7 @@ html, body {
 }
 
 .parkListItem:hover {
-    background: green;
+    background: rgba(117, 204, 117, 0.73);
 }
 
 .lastListItem {
