--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,6 +88,10 @@ html, body {
     overflow-x: hidden;
 }
 
+#infoWindowTemplate{
+    display: none;
+}
+
 #infoWindowContent {
     min-width: 176px;
 }
