--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,15 +5,16 @@
     font-family: sans-serif;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
-#map {
+.mapCanvas {
     height: 100%;
 }
 
-#sidebar {
+.sidebar {
     position: fixed;
     height: 100%;
     max-width: 90%;
@@ -25,18 +26,15 @@ html, body {
     background: white;
 }
 
-#searchBar {
+.searchBar {
     background: white;
     display: flex;
     align-items: center;
 }
 
-#searchBarInput {
+.searchBarInput {
     border: none;
     font-size: 15px;
-}
-
-#searchBarForm {
 }
 
 .hamburgerIcon {
@@ -58,10 +56,10 @@ html, body {
     margin: 12px 16px;
 }
 
-#parkList {
+.parkList {
     list-style-type: none;
     overflow-y: auto;
-    overflow-x: none;
+    overflow-x: hidden;
 }
 
 .parkListItem {
@@ -88,10 +86,18 @@ html, body {
     overflow-x: hidden;
 }
 
-#infoWindowTemplate{
+.template{
     display: none;
 }
 
-#infoWindowContent {
+.infoWindowContainer {
     min-width: 176px;
+}
+
+.yelpRatingStars {
+    height: 20px;
+}
+
+.yelpTM {
+    height: 40px;
 }
