--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,43 +17,48 @@ body {
 .sidebar {
     position: fixed;
     height: 100%;
-    max-width: 90%;
     top: 0;
     left: 0;
     display: flex;
     flex-direction: column;
-    padding: 10px 0px;
     background: white;
+}
+
+.searchBarContainer {
+    height: 60px;
 }
 
 .searchBar {
     background: white;
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    height: inherit;
 }
 
 .searchInput {
     border: none;
     font-size: 15px;
+    height: 35px;
+    margin: 0px 7px;
 }
 
 .hamburgerIcon {
-    border: none;
-    width: 25px;
-    margin: 12px 16px;
     cursor: pointer;
+    height: 35px;
+    margin: 0px 7px;
 }
 
 .searchIcon {
-    width: 25px;
     cursor: pointer;
-    margin: 12px 16px;
+    height: 35px;
+    margin: 0px 7px;
 }
 
 .resetIcon {
-    width: 25px;
     cursor: pointer;
-    margin: 12px 16px;
+    height: 35px;
+    margin: 0px 7px;
 }
 
 .parkList {
@@ -100,4 +105,14 @@ body {
 
 .yelpTM {
     height: 40px;
+}
+
+/* Desktop */
+@media screen and (min-width: 1200px) {
+    .sidebar{max-width: 40%;}
+}
+
+/* Mobile */
+@media screen and (max-width: 676px) {
+    .sidebar{width: 100%;}
 }
